--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "private": true,
   "scripts": {
-    "dev": "slidev",
+    "dev": "slidev --open",
     "build": "slidev build",
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.6.10",
-    "@slidev/theme-default": "^0.6.7",
-    "@slidev/theme-seriph": "^0.6.7"
+    "@slidev/cli": "^0.9.1",
+    "@slidev/theme-default": "*",
+    "@slidev/theme-seriph": "*"
   },
-  "name": "codespaces-environments"
+  "name": "uusversio"
 }
